[package]
name = "heatshield"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]

[features]
gensalt = []

[dependencies]
serde_derive = "1.0.27"
serde = "1.0"
serde_json = "1.0"
rocket = "^0.3.15"
rocket_codegen = "^0.3.15"
diesel = { version = "1.3.2", features = ["postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.9.0"
data-encoding = "2.1.1"
ring = "0.11"
uuid = { version = "0.6", features = ["serde", "v4"] }
jsonwebtoken = "2"
mashup = "0.1"

[dev-dependencies]
diesel_migrations = { version = "1.3.0", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "uuid"]
