[package]
name = "heatshield"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[features]
gensalt = []

[dependencies]
serde_derive = "1.0.27"
serde = "1.0"
serde_json = "1.0"
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
diesel = { version = "1.3.3", features = ["postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.9.0"
data-encoding = "2.1.1"
ring = "0.13.4"
jsonwebtoken = "5"
compat-uuid = { git = "https://github.com/technetos/compat-uuid" }
postgres-resource = { git = "https://github.com/technetos/postgres-resource" }

[dev-dependencies]
diesel_migrations = { version = "1.3.0", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json", "uuid"]
